# Hexlet_sand

./: Makefile  pyproject.toml  users.py
scripts/: example.py  xxx.py
scripts/templates/users/: delete.html  edit.html  enter.html  index.html  new.html  show.html
