[tool.poetry]
name = "sand"
version = "0.1.0"
description = ""
authors = ["SashaTolkodubova <atolkodubova@gmail.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = 'scripts.server:main'